@@ -308,6 +308,7 @@ importFrom(utils,head)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
 importFrom(utils,unzip)
+importFrom(vegan,"sppscores<-")
 importFrom(vegan,anova.cca)
 importFrom(vegan,betadisper)
 importFrom(vegan,monoMDS)
