@@ -29,13 +29,30 @@ test_that("CCA", {
                  'argument "formula" is missing, with no default')
     actual <- mia:::.get_dependent_var_name(form)
     expect_equal(actual, "dune")
+    # Check that input check of scores is working
+    expect_error(runCCA(sce, form, scores = 1))
+    expect_error(runCCA(sce, form, scores = TRUE))
+    expect_error(runCCA(sce, form, scores = NULL))
+    expect_error(runCCA(sce, form, scores = c("wa", "u")))
+    # 
+    mcca <- vegan::cca(form, dune.env)
+    sce <- runCCA(sce, form)
+    actual <- reducedDim(sce,"CCA")
+    expect_equal(as.vector(actual), as.vector(mcca$CCA$wa))
     #
     mcca <- vegan::cca(form, dune.env, scale = TRUE)
     mrda <- vegan::rda(form, dune.env, scale = FALSE)
-    set.seed(46)
-    sce <- runCCA(sce, form)
+    
+    sce <- runCCA(sce, form, scores = "u")
     actual <- reducedDim(sce,"CCA")
     expect_equal(as.vector(actual), as.vector(mcca$CCA$u))
+    # Check that test.signif works
+    expect_error( runCCA(sce, test.signif = 1) )
+    expect_error( runCCA(sce, test.signif = "TRUE") )
+    expect_error( runCCA(sce, test.signif = NULL) )
+    expect_error( runCCA(sce, test.signif = c(TRUE, TRUE)) )
+    mat <- calculateRDA(sce, scores = "u", test.signif = FALSE)
+    expect_true(is.null(attributes(mat)$significance))
     # Check that significance calculations are correct
     set.seed(46)
     sce <- runCCA(sce, variables = "Manure", full = TRUE)
@@ -70,12 +87,12 @@ test_that("CCA", {
     # Significance of betadisper with different permanova, anova and tukeyhsd
     expect_equal(res$homogeneity$variables$Manure$permanova, test$betadisper_permanova)
     set.seed(46)
-    sce <- runCCA(sce, form, full = TRUE, homogeneity_test = "anova")
+    sce <- runCCA(sce, form, full = TRUE, homogeneity.test = "anova")
     actual <- reducedDim(sce,"CCA")
     res <- attributes(actual)$significance
     expect_equal(res$homogeneity$variables$Manure$anova, test$betadisper_anova)
     set.seed(46)
-    sce <- runCCA(sce, form, full = TRUE, homogeneity_test = "tukeyhsd")
+    sce <- runCCA(sce, form, full = TRUE, homogeneity.test = "tukeyhsd")
     actual <- reducedDim(sce,"CCA")
     res <- attributes(actual)$significance
     expect_equal(res$homogeneity$variables$Manure$tukeyhsd, test$betadisper_tukeyhsd)
@@ -88,15 +105,15 @@ test_that("CCA", {
     enterotype <- enterotype[, complete.cases(colData(enterotype)[, variable_names])]
     expect_equal(colnames(res), colnames(enterotype))
     #
-    sce <- runRDA(sce, form)
+    sce <- runRDA(sce, form, scores = "u")
     actual <- reducedDim(sce,"RDA")
     expect_equal(abs( as.vector(actual) ), abs( as.vector(mrda$CCA$u) ))
-    sce <- runRDA(sce, form, distance = "bray", name = "rda_bray")
+    sce <- runRDA(sce, form, distance = "bray", name = "rda_bray", scores = "u")
     actual <- reducedDim(sce,"rda_bray")
     rda_bray <- vegan::dbrda(form, dune.env, distance = "bray")
     expect_equal(abs( as.vector(actual) ), abs( as.vector(rda_bray$CCA$u) ))
     #
-    sce <- runRDA(sce)
+    sce <- runRDA(sce, scores = "u")
     test <- reducedDim(sce,"RDA")
     # Test that eigenvalues match
     test <- attr(test, "rda")$CA$eig
